--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,19 @@ AI/*
 GIS/*
 Images/*
 Graphics/*
+#no data
+*.csv
+*.txt
+*.rds
+*.xlsx
+*.xls
+*.zip
+*.png
+*.twbx
+*.pptx
+
+#nothing from these folders
+AI/*
+GIS/*
+Images/*
+Graphics/*
